--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content: center;
+    height:100vh;
+    background:linear-gradient(134deg, #00081f,#002207);
+    color:white;
+}
+.card{
+    text-align:center;
+    padding:20px;
+    border-radius: 15px;
+    box-shadow:2px 3px 4px;
+}
+img{
+    width:100px;
+    height:100px;
+    border-radius: 50px;
+}
+button{
+    padding:5px 10px;
+    outline:none;
+    border:none;
+    background:#00ffaa;
+    color:black;
+    border-radius:10px;
+    cursor:pointer;
+    margin-bottom:15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover{
+    background:#00ffaaae;
 }
